work section now has correct alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ main section h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   color: darkred;
-  margin: 10px 20px 0px 10px;
+  margin: 0px 20px 0px 0px;
   padding: 10px 10px 0px 10px;
   border-right: solid darkred;
 }
@@ -70,58 +70,61 @@ main {
   line-height: 1.25;
 }
 
-#about-me p {
-  margin: 20px;
-}
-
 #work {
   display: flex;
-  justify-content: center;
 }
-#work .sample-main {
+#work .work-links {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+#work .work-links .sample-main {
   position: relative;
 }
 
-#work .sample-main img {
-  margin: 20px;
+#work .work-links .sample-main img {
+  margin: 0px 20px 10px;
   border: solid thick darkred;
-  width: 250px;
-  height: 200px;
+  width: 640px;
+  height: 250px;
   object-fit: cover;
 }
 
-#work .sample-main a {
+#work .work-links .sample-main a {
   position: absolute;
-  top: 175px;
+  bottom: 40px;
   left: 30px;
   background-color: rgb(188, 217, 197);
   padding: 5px;
   color: darkred;
   font-family: Arial, Helvetica, sans-serif;
-  font-style: bold;
+  font-weight: bold;
+  font-size: 20px;
 }
 
-#work .sample-secondary {
+#work .work-links .sample-secondary {
   position: relative;
 }
 
-#work .sample-secondary img {
-  margin: 20px;
+#work .work-links .sample-secondary img {
+  margin: 20px 20px 0px;
   border: solid thick darkred;
-  width: 250px;
+  width: 300px;
   height: 200px;
   object-fit: cover;
 }
 
-#work .sample-secondary a {
+#work .work-links .sample-secondary a {
   position: absolute;
-  top: 175px;
+  bottom: 30px;
   left: 30px;
   background-color: rgb(188, 217, 197);
   padding: 5px;
   color: darkred;
   font-family: Arial, Helvetica, sans-serif;
-  font-style: bold;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 #contact {
